force-app/main/default/objects/Qualifications__c/Qualifications__c.object-meta.xml
<CustomObject>
    <label>Qualifications</label>
    <nameField>
        <label>Qualification</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>