force-app/main/default/objects/Qualifications__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>please include department if relevant</inlineHelpText>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Qualifications</relationshipLabel>
    <relationshipName>Qualifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>