force-app/main/default/objects/Qualifications__c/fields/Principle_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Principle_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principle Investigator</label>
    <referenceTo>Investigator__c</referenceTo>
    <relationshipLabel>Qualifications</relationshipLabel>
    <relationshipName>Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>